get out wrongs pics...

--- a/agency-list.html
+++ b/agency-list.html
@@ -193,7 +193,7 @@
                       <div class="card-body">
                         <h3>Rodeo Realty</h3>
                         <h6 class="card-subtitle mt-1 mb-4 text-muted"><i class="mdi mdi-home-map-marker"></i> Hoboken,
-                          NJ, USA</h6>
+                          NJ, RDC</h6>
                         <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisqu lobortis
                           tincidunt est, et euismod purus suscipit quis. Etiam euismod ornare elementum. consectetur
                           adipiscing elit. Quisqu lobortis tincidunt est, et euismod purus suscipit quis. Etiam euismod
@@ -280,7 +280,7 @@
                       <div class="card-body">
                         <h3>Rodeo Realty</h3>
                         <h6 class="card-subtitle mt-1 mb-4 text-muted"><i class="mdi mdi-home-map-marker"></i> Hoboken,
-                          NJ, USA</h6>
+                          NJ, RDC</h6>
                         <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisqu lobortis
                           tincidunt est, et euismod purus suscipit quis. Etiam euismod ornare elementum. consectetur
                           adipiscing elit. Quisqu lobortis tincidunt est, et euismod purus suscipit quis. Etiam euismod
