--- a/agency-profile.html
+++ b/agency-profile.html
@@ -175,7 +175,7 @@
                             <p><strong class="text-dark">License :</strong> RE511U0</p>
                         </div>
                     </div>
-                    <div class="footer-social"><span>Follow : </span>
+                    <div class="footer-social"><span>FolReduit : </span>
                         <a href="#"><i class="mdi mdi-facebook"></i></a>
                         <a href="#"><i class="mdi mdi-twitter"></i></a>
                         <a href="#"><i class="mdi mdi-instagram"></i></a>
@@ -222,7 +222,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Family House in Hudson</h5>
                                 <h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i>
-                                    Hoboken, NJ, USA</h6>
+                                    Hoboken, NJ, RDC</h6>
                                 <h2 class="text-success mb-0 mt-3">
                                     $127,000 <small>/mois</small></h2>
                             </div>
