--- a/blog-single.html
+++ b/blog-single.html
@@ -174,7 +174,7 @@
                                 <div class="col-xl-10 offset-xl-1">
                                     <blockquote class="margin-top-1x margin-bottom-1x">
                                         <p class="font-weight-bold">Perspiciatis unde omnis iste natus error sit
-                                            voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
+                                            voluptatem accRDCntium doloremque laudantium, totam rem aperiam, eaque ipsa
                                             quae ab illo.</p>
                                         <cite>Someone famous</cite>
                                     </blockquote>
@@ -398,7 +398,7 @@
                                                 <div class="card-body">
                                                     <h5 class="card-title">Family House in Hudson</h5>
                                                     <h6 class="card-subtitle mb-2 text-muted"><i
-                                                            class="mdi mdi-home-map-marker"></i> Hoboken, NJ, USA</h6>
+                                                            class="mdi mdi-home-map-marker"></i> Hoboken, NJ, RDC</h6>
                                                     <h2 class="text-success mb-0 mt-3">
                                                         $127,000 <small>/mois</small></h2>
                                                 </div>
