--- a/favorite-properties.html
+++ b/favorite-properties.html
@@ -220,7 +220,7 @@
                                                     class="mdi mdi-delete-forever"></i> Delete</a>
                                             <h5 class="card-title">Family House in Hudson</h5>
                                             <h6 class="card-subtitle mb-2 text-muted"><i
-                                                    class="mdi mdi-home-map-marker"></i> Hoboken, NJ, USA</h6>
+                                                    class="mdi mdi-home-map-marker"></i> Hoboken, NJ, RDC</h6>
                                             <h2 class="text-success mb-0 mt-3">
                                                 $127,000 <small>/mois</small></h2>
                                         </div>
@@ -249,7 +249,7 @@
                                             <h5 class="card-title">Store Space Greenville</h5>
                                             <h6 class="card-subtitle mb-2 text-muted"><i
                                                     class="mdi mdi-home-map-marker"></i> 250-260 3rd St, Hoboken, NJ
-                                                07030, USA</h6>
+                                                07030, RDC</h6>
                                             <h2 class="text-success mb-0 mt-3">
                                                 $25,000 <small>/mois</small></h2>
                                         </div>
