--- a/index.html
+++ b/index.html
@@ -170,58 +170,79 @@
               <div class="input-group">
                 <div class="input-group-addon"><i class="mdi mdi-google-maps"></i></div>
                 <select class="form-control select2 no-radius">
-                  <option value="">Emplacements</option>
-                  <option value="AL">Alabama</option>
-                  <option value="AK">Alaska</option>
-                  <option value="AZ">Arizona</option>
-                  <option value="AR">Arkansas</option>
-                  <option value="CA">California</option>
-                  <option value="CO">Colorado</option>
-                  <option value="CT">Connecticut</option>
-                  <option value="DE">Delaware</option>
-                  <option value="DC">District Of Columbia</option>
-                  <option value="FL">Florida</option>
-                  <option value="GA">Georgia</option>
-                  <option value="HI">Hawaii</option>
-                  <option value="ID">Idaho</option>
-                  <option value="IL">Illinois</option>
-                  <option value="IN">Indiana</option>
-                  <option value="IA">Iowa</option>
-                  <option value="KS">Kansas</option>
-                  <option value="KY">Kentucky</option>
-                  <option value="LA">Louisiana</option>
-                  <option value="ME">Maine</option>
-                  <option value="MD">Maryland</option>
-                  <option value="MA">Massachusetts</option>
-                  <option value="MI">Michigan</option>
-                  <option value="MN">Minnesota</option>
-                  <option value="MS">Mississippi</option>
-                  <option value="MO">Missouri</option>
-                  <option value="MT">Montana</option>
-                  <option value="NE">Nebraska</option>
-                  <option value="NV">Nevada</option>
-                  <option value="NH">New Hampshire</option>
-                  <option value="NJ">New Jersey</option>
-                  <option value="NM">New Mexico</option>
-                  <option value="NY">New York</option>
-                  <option value="NC">North Carolina</option>
-                  <option value="ND">North Dakota</option>
-                  <option value="OH">Ohio</option>
-                  <option value="OK">Oklahoma</option>
-                  <option value="OR">Oregon</option>
-                  <option value="PA">Pennsylvania</option>
-                  <option value="RI">Rhode Island</option>
-                  <option value="SC">South Carolina</option>
-                  <option value="SD">South Dakota</option>
-                  <option value="TN">Tennessee</option>
-                  <option value="TX">Texas</option>
-                  <option value="UT">Utah</option>
-                  <option value="VT">Vermont</option>
-                  <option value="VA">Virginia</option>
-                  <option value="WA">Washington</option>
-                  <option value="WV">West Virginia</option>
-                  <option value="WI">Wisconsin</option>
-                  <option value="WY">Wyoming</option>
+                  <option value="#">Kamalondo</option>
+                  <option value="#">Kitumaini</option>
+                  <option value="#">Njanja</option>
+                  <option value="#">Kampemba</option>
+                  <option value="#">Bel-Air I</option>
+                  <option value="#">Bel-Air II</option>
+                  <option value="#">Bongonga</option>
+                  <option value="#">Quartier Industriel</option>
+                  <option value="#">Kafubu</option>
+                  <option value="#">Kampemba</option>
+                  <option value="#">Kigoma</option>
+                  <option value="#">Hewa-Bora</option>
+                  <option value="#">Megastore</option>
+                  <option value="#">Katuba</option>
+                  <option value="#">Bukama</option>
+                  <option value="#">Kaponda</option>
+                  <option value="#">Kinyama</option>
+                  <option value="#">Kimilolo</option>
+                  <option value="#">Kisale</option>
+                  <option value="#">Lufira</option>
+                  <option value="#">Musumba</option>
+                  <option value="#">Mwana Shaba</option>
+                  <option value="#">Nsele</option>
+                  <option value="#">Upemba</option>
+                  <option value="#">Kenya</option>
+                  <option value="#">Lualaba</option>
+                  <option value="#">Luapula</option>
+                  <option value="#">Luvua</option>
+                  <option value="#">Lubumbashi</option>
+                  <option value="#">Gambela 1</option>
+                  <option value="#">Gambela 2</option>
+                  <option value="#">Kalubwe</option>
+                  <option value="#">Kiwele</option>
+                  <option value="#">Lido-Golf</option>
+                  <option value="#">Lumumba</option>
+                  <option value="#">Makutano</option>
+                  <option value="#">Mampala</option>
+                  <option value="#">Baudoin</option>
+                  <option value="#">Makomeno</option>
+                  <option value="#">Golf-Tshiamalale</option>
+                  <option value="#">Golf-Malela</option>
+                  <option value="#">Golf-Plateau</option>
+                  <option value="#">Golf-Faustin</option>
+                  <option value="#">Rwashi</option>
+                  <option value="#">Bendera</option>
+                  <option value="#">Kalukuluku</option>
+                  <option value="#">Matoleo</option>
+                  <option value="#">Shindaika</option>
+                  <option value="#">Congo</option>
+                  <option value="#">Radem</option>
+                  <option value="#">Commune urbano-rurale</option>
+                  <option value="#">Annexe</option>
+                  <option value="#">Kalebuka</option>
+                  <option value="#">Kasapa</option>
+                  <option value="#">Kasungami</option>
+                  <option value="#">Kimbembe</option>
+                  <option value="#">Kisanga</option>
+                  <option value="#">Luwowoshi</option>
+                  <option value="#">Munua</option>
+                  <option value="#">Naviundu</option>
+                  <option value="#">Kilobelobe</option>
+                  <option value="#">Kamisepe</option>
+                  <option value="#">Joli-site</option>
+                  <option value="#">Munama</option>
+                  <option value="#">Kashamata</option>
+                  <option value="#">Kasamba</option>
+                  <option value="#">Kanyaka</option>
+                  <option value="#">Katwatwa</option>
+                  <option value="#">Makwatsha</option>
+                  <option value="#">Kafubu village</option>
+                  <option value="#">Kamasaka</option>
+                  <option value="#">Zambia</option>
+                  <option value="#">Centre de recherche agroalimentaire (CRAA)</option>
                 </select>
               </div>
             </div>
@@ -285,7 +306,7 @@
               <img class="card-img-top" src="img/list/2.png" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Maison familiale à Hudson</h5>
-                <h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i> Hoboken, NJ, USA</h6>
+                <h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i> Hoboken, NJ, RDC</h6>
                 <h2 class="text-success mb-0 mt-3">
                   $127,000 <small>/mois</small></h2>
               </div>
@@ -327,7 +348,7 @@
               <div class="card-body">
                 <h5 class="card-title">Espace de vente à Greenville</h5>
                 <h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i> 250-260 3rd St,
-                  Hoboken, NJ 07030, USA</h6>
+                  Hoboken, NJ 07030, RDC</h6>
                 <h2 class="text-success mb-0 mt-3">
                   $25,000 <small>/mois</small></h2>
               </div>
@@ -346,7 +367,7 @@
               <img class="card-img-top" src="img/list/5.png" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Villa à Melbourne</h5>
-                <h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i> NJ 07305, USA</h6>
+                <h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i> NJ 07305, RDC</h6>
                 <h2 class="text-success mb-0 mt-3">
                   $12,000 <small>/mois</small></h2>
               </div>
@@ -366,7 +387,7 @@
               <div class="card-body">
                 <h5 class="card-title">Villa sur Hollywood Boulev</h5>
                 <h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i> The Village, Jersey
-                  City, NJ 07302, USA</h6>
+                  City, NJ 07302, RDC</h6>
                 <h2 class="text-success mb-0 mt-3">
                   $356, 000 <small>/mois</small></h2>
               </div>
@@ -382,7 +403,7 @@
     </div>
   </section>
 
-
+<!--
   <section class="section-padding bg-white">
     <div class="section-title text-center mb-5">
       <h2>Propriété par ville</h2>
@@ -395,7 +416,7 @@
             <a href="#">
               <img class="card-img" src="img/overlay/1.png" alt="Card image">
               <div class="card-img-overlay">
-                <h3 class="card-title text-white">New York</h3>
+                <h3 class="card-title text-white">Lubumbashi</h3>
                 <p class="card-text text-white">16 Propriétés</p>
               </div>
             </a>
@@ -406,7 +427,7 @@
             <a href="#">
               <img class="card-img" src="img/overlay/2.png" alt="Card image">
               <div class="card-img-overlay">
-                <h3 class="card-title text-white">Los Angeles</h3>
+                <h3 class="card-title text-white">Kolwezi</h3>
                 <p class="card-text text-white">265 Propriétés</p>
               </div>
             </a>
@@ -419,7 +440,7 @@
             <a href="#">
               <img class="card-img" src="img/overlay/3.png" alt="Card image">
               <div class="card-img-overlay">
-                <h3 class="card-title text-white">Chicago</h3>
+                <h3 class="card-title text-white">Kinshasa</h3>
                 <p class="card-text text-white">620 Propriétés</p>
               </div>
             </a>
@@ -431,7 +452,7 @@
             <a href="#">
               <img class="card-img" src="img/overlay/4.png" alt="Card image">
               <div class="card-img-overlay">
-                <h3 class="card-title text-white">Philadelphia</h3>
+                <h3 class="card-title text-white">Fungurume</h3>
                 <p class="card-text text-white">28 Propriétés</p>
               </div>
             </a>
@@ -440,6 +461,7 @@
       </div>
     </div>
   </section>
+  -->
 
 
   <!-- <section class="section-padding">
