--- a/index1.html
+++ b/index1.html
@@ -203,7 +203,7 @@
                                     <option value="NH">New Hampshire</option>
                                     <option value="NJ">New Jersey</option>
                                     <option value="NM">New Mexico</option>
-                                    <option value="NY">New York</option>
+                                    <option value="NY">Lubumbashi</option>
                                     <option value="NC">North Carolina</option>
                                     <option value="ND">North Dakota</option>
                                     <option value="OH">Ohio</option>
@@ -229,7 +229,7 @@
                             <div class="input-group">
                                 <div class="input-group-addon"><i class="mdi mdi-security-home"></i></div>
                                 <select class="form-control select2 no-radius">
-                                    <option value="">Property Type</option>
+                                    <option value="">Propriété par type</option>
                                     <option value="">House/Villa</option>
                                     <option value="">Flat</option>
                                     <option value="">Plot/Land</option>
@@ -288,7 +288,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Family House in Hudson</h5>
                                 <h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i>
-                                    Hoboken, NJ, USA</h6>
+                                    Hoboken, NJ, RDC</h6>
                                 <h2 class="text-success mb-0 mt-3">
                                     $127,000 <small>/mois</small></h2>
                             </div>
@@ -332,7 +332,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Store Space Greenville</h5>
                                 <h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i>
-                                    250-260 3rd St, Hoboken, NJ 07030, USA</h6>
+                                    250-260 3rd St, Hoboken, NJ 07030, RDC</h6>
                                 <h2 class="text-success mb-0 mt-3">
                                     $25,000 <small>/mois</small></h2>
                             </div>
@@ -353,7 +353,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Villa in Melbourne</h5>
                                 <h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i> NJ
-                                    07305, USA</h6>
+                                    07305, RDC</h6>
                                 <h2 class="text-success mb-0 mt-3">
                                     $12,000 <small>/mois</small></h2>
                             </div>
@@ -374,7 +374,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Villa on Hollywood Boulev</h5>
                                 <h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i> The
-                                    Village, Jersey City, NJ 07302, USA</h6>
+                                    Village, Jersey City, NJ 07302, RDC</h6>
                                 <h2 class="text-success mb-0 mt-3">
                                     $356, 000 <small>/mois</small></h2>
                             </div>
@@ -391,6 +391,7 @@
         </div>
     </section>
 
+    <!--
 
     <section class="section-padding bg-white">
         <div class="section-title text-center mb-5">
@@ -404,7 +405,7 @@
                         <a href="#">
                             <img class="card-img" src="img/overlay/1.png" alt="Card image">
                             <div class="card-img-overlay">
-                                <h3 class="card-title text-white">New York</h3>
+                                <h3 class="card-title text-white">Lubumbashi</h3>
                                 <p class="card-text text-white">16 Properties</p>
                             </div>
                         </a>
@@ -415,7 +416,7 @@
                         <a href="#">
                             <img class="card-img" src="img/overlay/2.png" alt="Card image">
                             <div class="card-img-overlay">
-                                <h3 class="card-title text-white">Los Angeles</h3>
+                                <h3 class="card-title text-white">Kolwezi</h3>
                                 <p class="card-text text-white">265 Properties</p>
                             </div>
                         </a>
@@ -428,7 +429,7 @@
                         <a href="#">
                             <img class="card-img" src="img/overlay/3.png" alt="Card image">
                             <div class="card-img-overlay">
-                                <h3 class="card-title text-white">Chicago</h3>
+                                <h3 class="card-title text-white">Kinshasa</h3>
                                 <p class="card-text text-white">620 Properties</p>
                             </div>
                         </a>
@@ -440,7 +441,7 @@
                         <a href="#">
                             <img class="card-img" src="img/overlay/4.png" alt="Card image">
                             <div class="card-img-overlay">
-                                <h3 class="card-title text-white">Philadelphia</h3>
+                                <h3 class="card-title text-white">Fungurume</h3>
                                 <p class="card-text text-white">28 Properties</p>
                             </div>
                         </a>
@@ -449,6 +450,7 @@
             </div>
         </div>
     </section>
+    -->
 
 
     <!-- <section class="section-padding">
