--- a/my-properties.html
+++ b/my-properties.html
@@ -222,7 +222,7 @@
                                                         class="mdi mdi-table-edit"></i> Edit</span>
                                                 <h5 class="card-title">Family House in Hudson</h5>
                                                 <h6 class="card-subtitle mb-2 text-muted"><i
-                                                        class="mdi mdi-home-map-marker"></i> Hoboken, NJ, USA</h6>
+                                                        class="mdi mdi-home-map-marker"></i> Hoboken, NJ, RDC</h6>
                                                 <h2 class="text-success mb-0 mt-3">
                                                     $127,000 <small>/mois</small></h2>
                                             </div>
@@ -253,7 +253,7 @@
                                                 <h5 class="card-title">Store Space Greenville</h5>
                                                 <h6 class="card-subtitle mb-2 text-muted"><i
                                                         class="mdi mdi-home-map-marker"></i> 250-260 3rd St, Hoboken, NJ
-                                                    07030, USA</h6>
+                                                    07030, RDC</h6>
                                                 <h2 class="text-success mb-0 mt-3">
                                                     $25,000 <small>/mois</small></h2>
                                             </div>
@@ -283,7 +283,7 @@
                                                         class="mdi mdi-table-edit"></i> Edit</span>
                                                 <h5 class="card-title">Villa in Melbourne</h5>
                                                 <h6 class="card-subtitle mb-2 text-muted"><i
-                                                        class="mdi mdi-home-map-marker"></i> NJ 07305, USA</h6>
+                                                        class="mdi mdi-home-map-marker"></i> NJ 07305, RDC</h6>
                                                 <h2 class="text-success mb-0 mt-3">
                                                     $12,000 <small>/mois</small></h2>
                                             </div>
@@ -314,7 +314,7 @@
                                                 <h5 class="card-title">Villa on Hollywood Boulev</h5>
                                                 <h6 class="card-subtitle mb-2 text-muted"><i
                                                         class="mdi mdi-home-map-marker"></i> The Village, Jersey City,
-                                                    NJ 07302, USA</h6>
+                                                    NJ 07302, RDC</h6>
                                                 <h2 class="text-success mb-0 mt-3">
                                                     $356, 000 <small>/mois</small></h2>
                                             </div>
