--- a/properties-grid.html
+++ b/properties-grid.html
@@ -165,19 +165,79 @@
                                 <div class="input-group-addon"><i class="mdi mdi-map-marker-multiple"></i></div>
                                 <select class="form-control select2" name="Emplacement">
                                     <option disabled="" selected="">Emplacement</option>
-                                    <option>Australia</option>
-                                    <option>Brazil</option>
-                                    <option>Cambodia</option>
-                                    <option>Dominica</option>
-                                    <option>France</option>
-                                    <option>Guyana</option>
-                                    <option>Hong Kong</option>
-                                    <option>Ireland</option>
-                                    <option>Japan</option>
-                                    <option>Malaysia</option>
-                                    <option>Nepal</option>
-                                    <option>Oman</option>
-                                    <option>Peru</option>
+                                    <option value="#">Kamalondo</option>
+                                    <option value="#">Kitumaini</option>
+                                    <option value="#">Njanja</option>
+                                    <option value="#">Kampemba</option>
+                                    <option value="#">Bel-Air I</option>
+                                    <option value="#">Bel-Air II</option>
+                                    <option value="#">Bongonga</option>
+                                    <option value="#">Quartier Industriel</option>
+                                    <option value="#">Kafubu</option>
+                                    <option value="#">Kampemba</option>
+                                    <option value="#">Kigoma</option>
+                                    <option value="#">Hewa-Bora</option>
+                                    <option value="#">Megastore</option>
+                                    <option value="#">Katuba</option>
+                                    <option value="#">Bukama</option>
+                                    <option value="#">Kaponda</option>
+                                    <option value="#">Kinyama</option>
+                                    <option value="#">Kimilolo</option>
+                                    <option value="#">Kisale</option>
+                                    <option value="#">Lufira</option>
+                                    <option value="#">Musumba</option>
+                                    <option value="#">Mwana Shaba</option>
+                                    <option value="#">Nsele</option>
+                                    <option value="#">Upemba</option>
+                                    <option value="#">Kenya</option>
+                                    <option value="#">Lualaba</option>
+                                    <option value="#">Luapula</option>
+                                    <option value="#">Luvua</option>
+                                    <option value="#">Lubumbashi</option>
+                                    <option value="#">Gambela 1</option>
+                                    <option value="#">Gambela 2</option>
+                                    <option value="#">Kalubwe</option>
+                                    <option value="#">Kiwele</option>
+                                    <option value="#">Lido-Golf</option>
+                                    <option value="#">Lumumba</option>
+                                    <option value="#">Makutano</option>
+                                    <option value="#">Mampala</option>
+                                    <option value="#">Baudoin</option>
+                                    <option value="#">Makomeno</option>
+                                    <option value="#">Golf-Tshiamalale</option>
+                                    <option value="#">Golf-Malela</option>
+                                    <option value="#">Golf-Plateau</option>
+                                    <option value="#">Golf-Faustin</option>
+                                    <option value="#">Rwashi</option>
+                                    <option value="#">Bendera</option>
+                                    <option value="#">Kalukuluku</option>
+                                    <option value="#">Matoleo</option>
+                                    <option value="#">Shindaika</option>
+                                    <option value="#">Congo</option>
+                                    <option value="#">Radem</option>
+                                    <option value="#">Commune urbano-rurale</option>
+                                    <option value="#">Annexe</option>
+                                    <option value="#">Kalebuka</option>
+                                    <option value="#">Kasapa</option>
+                                    <option value="#">Kasungami</option>
+                                    <option value="#">Kimbembe</option>
+                                    <option value="#">Kisanga</option>
+                                    <option value="#">Luwowoshi</option>
+                                    <option value="#">Munua</option>
+                                    <option value="#">Naviundu</option>
+                                    <option value="#">Kilobelobe</option>
+                                    <option value="#">Kamisepe</option>
+                                    <option value="#">Joli-site</option>
+                                    <option value="#">Munama</option>
+                                    <option value="#">Kashamata</option>
+                                    <option value="#">Kasamba</option>
+                                    <option value="#">Kanyaka</option>
+                                    <option value="#">Katwatwa</option>
+                                    <option value="#">Makwatsha</option>
+                                    <option value="#">Kafubu village</option>
+                                    <option value="#">Kamasaka</option>
+                                    <option value="#">Zambia</option>
+                                    <option value="#">Centre de recherche agroalimentaire (CRAA)</option>
                                 </select>
                             </div>
                         </div>
@@ -186,8 +246,8 @@
                                 <div class="input-group-addon"><i class="mdi mdi-city"></i></div>
                                 <select class="form-control select2" name="Emplacement">
                                     <option disabled="" selected="">Statut</option>
-                                    <option>Heigh </option>
-                                    <option>Midium</option>
+                                    <option>Hauteur </option>
+                                    <option>Moyenne</option>
                                     <option>Normal</option>
                                 </select>
                             </div>
@@ -197,15 +257,15 @@
                                 <div class="input-group-addon"><i class="mdi mdi-home-modern"></i></div>
                                 <select class="form-control select2" name="Emplacement">
                                     <option disabled="" selected="">Type</option>
-                                    <option>Property Types</option>
-                                    <option value="">House/Villa</option>
-                                    <option value="">Flat</option>
-                                    <option value="">Plot/Land</option>
-                                    <option value="">Office Space</option>
-                                    <option value="">Shop/Showroom</option>
-                                    <option value="">Commercial Land</option>
-                                    <option value="">Warehouse/ Godown</option>
-                                    <option value="">Industrial Building</option>
+                                    <option>Propriété par types</option>
+                                    <option value="">Maison/Villa</option>
+                                    <option value="">Appartement</option>
+                                    <option value="">Terrain/terrain</option>
+                                    <option value="">Bureau</option>
+                                    <option value="">Boutique/Showroom</option>
+                                    <option value="">Terrain commercial</option>
+                                    <option value="">Entrepôt/ Godown</option>
+                                    <option value="">Bâtiment industriel</option>
                                 </select>
                             </div>
                         </div>
@@ -298,30 +358,30 @@
                 <div class="col-lg-3 col-md-3">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title mb-3">Property Type</h5>
+                            <h5 class="card-title mb-3">Propriété par type</h5>
                             <ul class="sidebar-card-list">
-                                <li><a href="#"><i class="mdi mdi-chevron-right"></i> House/Villa <span
+                                <li><a href="#"><i class="mdi mdi-chevron-right"></i> Maison/Villa <span
                                             class="sidebar-badge">90</span></a></li>
-                                <li><a href="#"><i class="mdi mdi-chevron-right"></i> Flat <span
+                                <li><a href="#"><i class="mdi mdi-chevron-right"></i> Appartement <span
                                             class="sidebar-badge">60</span></a></li>
-                                <li><a href="#"><i class="mdi mdi-chevron-right"></i> Plot/Land <span
+                                <li><a href="#"><i class="mdi mdi-chevron-right"></i> Terrain/terrain <span
                                             class="sidebar-badge">44</span></a></li>
-                                <li><a href="#"><i class="mdi mdi-chevron-right"></i> Office Space <span
+                                <li><a href="#"><i class="mdi mdi-chevron-right"></i> Bureau <span
                                             class="sidebar-badge">38</span></a></li>
-                                <li><a href="#"><i class="mdi mdi-chevron-right"></i> Shop/Showroom <span
+                                <li><a href="#"><i class="mdi mdi-chevron-right"></i> Boutique/Showroom <span
                                             class="sidebar-badge">29</span></a></li>
-                                <li><a href="#"><i class="mdi mdi-chevron-right"></i> Commercial Land <span
+                                <li><a href="#"><i class="mdi mdi-chevron-right"></i> Terrain commercial <span
                                             class="sidebar-badge">28</span></a></li>
-                                <li><a href="#"><i class="mdi mdi-chevron-right"></i> Warehouse/ Godown <span
+                                <li><a href="#"><i class="mdi mdi-chevron-right"></i> Entrepôt/ Godown <span
                                             class="sidebar-badge">12</span></a></li>
-                                <li><a href="#"><i class="mdi mdi-chevron-right"></i> Industrial Building <span
+                                <li><a href="#"><i class="mdi mdi-chevron-right"></i> Bâtiment industriel <span
                                             class="sidebar-badge">8</span></a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title mb-3">Property Status</h5>
+                            <h5 class="card-title mb-3">Propriété par status</h5>
                             <ul class="sidebar-card-list">
                                 <li><a href="#"><i class="mdi mdi-chevron-right"></i> À louer <span
                                             class="sidebar-badge">600</span></a></li>
@@ -334,15 +394,15 @@
                         <div class="card-body">
                             <h5 class="card-title mb-3">Propriété par ville</h5>
                             <ul class="sidebar-card-list">
-                                <li><a href="#"><i class="mdi mdi-chevron-right"></i> New York <span
+                                <li><a href="#"><i class="mdi mdi-chevron-right"></i> Lubumbashi <span
                                             class="sidebar-badge">220</span></a></li>
-                                <li><a href="#"><i class="mdi mdi-chevron-right"></i> Los Angeles <span
+                                <li><a href="#"><i class="mdi mdi-chevron-right"></i> Kolwezi <span
                                             class="sidebar-badge">150</span></a></li>
-                                <li><a href="#"><i class="mdi mdi-chevron-right"></i> Chicago <span
+                                <li><a href="#"><i class="mdi mdi-chevron-right"></i> Kinshasa <span
                                             class="sidebar-badge">100</span></a></li>
-                                <li><a href="#"><i class="mdi mdi-chevron-right"></i> Houston <span
+                                <li><a href="#"><i class="mdi mdi-chevron-right"></i> Goma <span
                                             class="sidebar-badge">50</span></a></li>
-                                <li><a href="#"><i class="mdi mdi-chevron-right"></i> Philadelphia <span
+                                <li><a href="#"><i class="mdi mdi-chevron-right"></i> Fungurume <span
                                             class="sidebar-badge">23</span></a></li>
                             </ul>
                         </div>
@@ -380,7 +440,7 @@
                                                 <div class="card-body">
                                                     <h5 class="card-title">Family House in Hudson</h5>
                                                     <h6 class="card-subtitle mb-2 text-muted"><i
-                                                            class="mdi mdi-home-map-marker"></i> Hoboken, NJ, USA</h6>
+                                                            class="mdi mdi-home-map-marker"></i> Hoboken, NJ, RDC</h6>
                                                     <h2 class="text-success mb-0 mt-3">
                                                         $127,000 <small>/mois</small></h2>
                                                 </div>
@@ -407,18 +467,18 @@
                                 <button class="btn btn-success btn-sm dropdown-toggle" type="button"
                                     id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
                                     aria-expanded="false">
-                                    <i class="mdi mdi-filter"></i> Sort by
+                                    <i class="mdi mdi-filter"></i> Trier par
                                 </button>
                                 <div class="dropdown-menu float-right" aria-labelledby="dropdownMenuButton">
-                                    <a class="dropdown-item" href="#"><i class="mdi mdi-chevron-right"></i> Popularity
+                                    <a class="dropdown-item" href="#"><i class="mdi mdi-chevron-right"></i> Popularité
                                     </a>
                                     <a class="dropdown-item" href="#"><i class="mdi mdi-chevron-right"></i> New </a>
-                                    <a class="dropdown-item" href="#"><i class="mdi mdi-chevron-right"></i> Discount
+                                    <a class="dropdown-item" href="#"><i class="mdi mdi-chevron-right"></i> Rabais
                                     </a>
-                                    <a class="dropdown-item" href="#"><i class="mdi mdi-chevron-right"></i> Price: Low
-                                        to High </a>
-                                    <a class="dropdown-item" href="#"><i class="mdi mdi-chevron-right"></i> Price: High
-                                        to Low </a>
+                                    <a class="dropdown-item" href="#"><i class="mdi mdi-chevron-right"></i> Prix: Faible à
+                                         Elevé </a>
+                                    <a class="dropdown-item" href="#"><i class="mdi mdi-chevron-right"></i> Prix: Elevé
+                                        à faible </a>
                                 </div>
                             </div>
                         </div>
@@ -454,7 +514,7 @@
                                     <div class="card-body">
                                         <h5 class="card-title">Family House in Hudson</h5>
                                         <h6 class="card-subtitle mb-2 text-muted"><i
-                                                class="mdi mdi-home-map-marker"></i> Hoboken, NJ, USA</h6>
+                                                class="mdi mdi-home-map-marker"></i> Hoboken, NJ, RDC</h6>
                                         <h2 class="text-success mb-0 mt-3">
                                             $127,000 <small>/mois</small></h2>
                                     </div>
@@ -478,7 +538,7 @@
                                         <h5 class="card-title">Store Space Greenville</h5>
                                         <h6 class="card-subtitle mb-2 text-muted"><i
                                                 class="mdi mdi-home-map-marker"></i> 250-260 3rd St, Hoboken, NJ 07030,
-                                            USA</h6>
+                                            RDC</h6>
                                         <h2 class="text-success mb-0 mt-3">
                                             $25,000 <small>/mois</small></h2>
                                     </div>
@@ -499,7 +559,7 @@
                                     <div class="card-body">
                                         <h5 class="card-title">Villa in Melbourne</h5>
                                         <h6 class="card-subtitle mb-2 text-muted"><i
-                                                class="mdi mdi-home-map-marker"></i> NJ 07305, USA</h6>
+                                                class="mdi mdi-home-map-marker"></i> NJ 07305, RDC</h6>
                                         <h2 class="text-success mb-0 mt-3">
                                             $12,000 <small>/mois</small></h2>
                                     </div>
@@ -523,7 +583,7 @@
                                         <h5 class="card-title">Villa on Hollywood Boulev</h5>
                                         <h6 class="card-subtitle mb-2 text-muted"><i
                                                 class="mdi mdi-home-map-marker"></i> The Village, Jersey City, NJ 07302,
-                                            USA</h6>
+                                            RDC</h6>
                                         <h2 class="text-success mb-0 mt-3">
                                             $356, 000 <small>/mois</small></h2>
                                     </div>
