--- a/properties-list.html
+++ b/properties-list.html
@@ -197,7 +197,7 @@
                                 <div class="input-group-addon"><i class="mdi mdi-home-modern"></i></div>
                                 <select class="form-control select2" name="Emplacement">
                                     <option disabled="" selected="">Type</option>
-                                    <option>Property Types</option>
+                                    <option>Propriété par types</option>
                                     <option value="">House/Villa</option>
                                     <option value="">Flat</option>
                                     <option value="">Plot/Land</option>
@@ -298,7 +298,7 @@
                 <div class="col-lg-4 col-md-4">
                     <div class="card sidebar-card">
                         <div class="card-body">
-                            <h5 class="card-title mb-3">Property Type</h5>
+                            <h5 class="card-title mb-3">Propriété par type</h5>
                             <ul class="sidebar-card-list">
                                 <li><a href="#"><i class="mdi mdi-chevron-right"></i> House/Villa <span
                                             class="sidebar-badge">90</span></a></li>
@@ -321,7 +321,7 @@
                     </div>
                     <div class="card sidebar-card">
                         <div class="card-body">
-                            <h5 class="card-title mb-3">Property Status</h5>
+                            <h5 class="card-title mb-3">Propriété par status</h5>
                             <ul class="sidebar-card-list">
                                 <li><a href="#"><i class="mdi mdi-chevron-right"></i> À louer <span
                                             class="sidebar-badge">600</span></a></li>
@@ -334,15 +334,15 @@
                         <div class="card-body">
                             <h5 class="card-title mb-3">Propriété par ville</h5>
                             <ul class="sidebar-card-list">
-                                <li><a href="#"><i class="mdi mdi-chevron-right"></i> New York <span
+                                <li><a href="#"><i class="mdi mdi-chevron-right"></i> Lubumbashi <span
                                             class="sidebar-badge">220</span></a></li>
-                                <li><a href="#"><i class="mdi mdi-chevron-right"></i> Los Angeles <span
+                                <li><a href="#"><i class="mdi mdi-chevron-right"></i> Kolwezi <span
                                             class="sidebar-badge">150</span></a></li>
-                                <li><a href="#"><i class="mdi mdi-chevron-right"></i> Chicago <span
+                                <li><a href="#"><i class="mdi mdi-chevron-right"></i> Kinshasa <span
                                             class="sidebar-badge">100</span></a></li>
-                                <li><a href="#"><i class="mdi mdi-chevron-right"></i> Houston <span
+                                <li><a href="#"><i class="mdi mdi-chevron-right"></i> Goma <span
                                             class="sidebar-badge">50</span></a></li>
-                                <li><a href="#"><i class="mdi mdi-chevron-right"></i> Philadelphia <span
+                                <li><a href="#"><i class="mdi mdi-chevron-right"></i> Fungurume <span
                                             class="sidebar-badge">23</span></a></li>
                             </ul>
                         </div>
@@ -380,7 +380,7 @@
                                                 <div class="card-body">
                                                     <h5 class="card-title">Family House in Hudson</h5>
                                                     <h6 class="card-subtitle mb-2 text-muted"><i
-                                                            class="mdi mdi-home-map-marker"></i> Hoboken, NJ, USA</h6>
+                                                            class="mdi mdi-home-map-marker"></i> Hoboken, NJ, RDC</h6>
                                                     <h2 class="text-success mb-0 mt-3">
                                                         $127,000 <small>/mois</small></h2>
                                                 </div>
@@ -407,18 +407,18 @@
                                 <button class="btn btn-success btn-sm dropdown-toggle" type="button"
                                     id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
                                     aria-expanded="false">
-                                    <i class="mdi mdi-filter"></i> Sort by
+                                    <i class="mdi mdi-filter"></i> Trier par
                                 </button>
                                 <div class="dropdown-menu float-right" aria-labelledby="dropdownMenuButton">
-                                    <a class="dropdown-item" href="#"><i class="mdi mdi-chevron-right"></i> Popularity
+                                    <a class="dropdown-item" href="#"><i class="mdi mdi-chevron-right"></i> Popularité
                                     </a>
                                     <a class="dropdown-item" href="#"><i class="mdi mdi-chevron-right"></i> New </a>
-                                    <a class="dropdown-item" href="#"><i class="mdi mdi-chevron-right"></i> Discount
+                                    <a class="dropdown-item" href="#"><i class="mdi mdi-chevron-right"></i> Rabais
                                     </a>
-                                    <a class="dropdown-item" href="#"><i class="mdi mdi-chevron-right"></i> Price: Low
-                                        to High </a>
-                                    <a class="dropdown-item" href="#"><i class="mdi mdi-chevron-right"></i> Price: High
-                                        to Low </a>
+                                    <a class="dropdown-item" href="#"><i class="mdi mdi-chevron-right"></i> Prix: Reduit
+                                        to Elevé </a>
+                                    <a class="dropdown-item" href="#"><i class="mdi mdi-chevron-right"></i> Prix: Elevé
+                                        to Reduit </a>
                                 </div>
                             </div>
                         </div>
@@ -465,7 +465,7 @@
                                             <div class="card-body">
                                                 <h5 class="card-title">Family House in Hudson</h5>
                                                 <h6 class="card-subtitle mb-2 text-muted"><i
-                                                        class="mdi mdi-home-map-marker"></i> Hoboken, NJ, USA</h6>
+                                                        class="mdi mdi-home-map-marker"></i> Hoboken, NJ, RDC</h6>
                                                 <h2 class="text-success mb-0 mt-3">
                                                     $127,000 <small>/mois</small></h2>
                                             </div>
@@ -494,7 +494,7 @@
                                                 <h5 class="card-title">Store Space Greenville</h5>
                                                 <h6 class="card-subtitle mb-2 text-muted"><i
                                                         class="mdi mdi-home-map-marker"></i> 250-260 3rd St, Hoboken, NJ
-                                                    07030, USA</h6>
+                                                    07030, RDC</h6>
                                                 <h2 class="text-success mb-0 mt-3">
                                                     $25,000 <small>/mois</small></h2>
                                             </div>
@@ -522,7 +522,7 @@
                                             <div class="card-body">
                                                 <h5 class="card-title">Villa in Melbourne</h5>
                                                 <h6 class="card-subtitle mb-2 text-muted"><i
-                                                        class="mdi mdi-home-map-marker"></i> NJ 07305, USA</h6>
+                                                        class="mdi mdi-home-map-marker"></i> NJ 07305, RDC</h6>
                                                 <h2 class="text-success mb-0 mt-3">
                                                     $12,000 <small>/mois</small></h2>
                                             </div>
@@ -552,7 +552,7 @@
                                                 <h5 class="card-title">Villa on Hollywood Boulev</h5>
                                                 <h6 class="card-subtitle mb-2 text-muted"><i
                                                         class="mdi mdi-home-map-marker"></i> The Village, Jersey City,
-                                                    NJ 07302, USA</h6>
+                                                    NJ 07302, RDC</h6>
                                                 <h2 class="text-success mb-0 mt-3">
                                                     $356, 000 <small>/mois</small></h2>
                                             </div>
