--- a/property-single-slider.html
+++ b/property-single-slider.html
@@ -161,7 +161,7 @@
 					<div class="col-lg-8 col-md-8">
 						<h1 class="text-white">House in Kent Street</h1>
 						<h6 class="text-white"><i class="mdi mdi-home-map-marker"></i> 250-260 3rd St, Hoboken, NJ
-							07030, USA</h6>
+							07030, RDC</h6>
 					</div>
 					<div class="col-lg-4 col-md-4 text-right">
 						<h6 class="text-white mt-2">À louer</h6>
@@ -545,7 +545,7 @@
 												<div class="card-body">
 													<h5 class="card-title">Family House in Hudson</h5>
 													<h6 class="card-subtitle mb-2 text-muted"><i
-															class="mdi mdi-home-map-marker"></i> Hoboken, NJ, USA</h6>
+															class="mdi mdi-home-map-marker"></i> Hoboken, NJ, RDC</h6>
 													<h2 class="text-success mb-0 mt-3">
 														$127,000 <small>/mois</small></h2>
 												</div>
@@ -562,7 +562,7 @@
 							<form name="sentMessage">
 								<div class="control-group form-group">
 									<div class="controls">
-										<label>Sale Price <span class="text-danger">*</span></label>
+										<label>Prix de vente <span class="text-danger">*</span></label>
 										<input type="text" placeholder="$" class="form-control" required>
 									</div>
 								</div>
@@ -629,7 +629,7 @@
 							<div class="card-body">
 								<h5 class="card-title">Family House in Hudson</h5>
 								<h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i>
-									Hoboken, NJ, USA</h6>
+									Hoboken, NJ, RDC</h6>
 								<h2 class="text-success mb-0 mt-3">
 									$127,000 <small>/mois</small></h2>
 							</div>
