--- a/index2.html
+++ b/index2.html
@@ -175,7 +175,7 @@
 								<div class="input-group-addon"><i class="mdi mdi-home-modern"></i></div>
 								<select class="form-control select2" name="Emplacement">
 									<option disabled="" selected="">Type</option>
-									<option>Property Types</option>
+									<option>Propriété par types</option>
 									<option value="">House/Villa</option>
 									<option value="">Flat</option>
 									<option value="">Plot/Land</option>
@@ -308,7 +308,7 @@
 							<div class="card-body">
 								<h5 class="card-title">Family House in Hudson</h5>
 								<h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i>
-									Hoboken, NJ, USA</h6>
+									Hoboken, NJ, RDC</h6>
 								<h2 class="text-success mb-0 mt-3">
 									$127,000 <small>/mois</small></h2>
 							</div>
@@ -352,7 +352,7 @@
 							<div class="card-body">
 								<h5 class="card-title">Store Space Greenville</h5>
 								<h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i>
-									250-260 3rd St, Hoboken, NJ 07030, USA</h6>
+									250-260 3rd St, Hoboken, NJ 07030, RDC</h6>
 								<h2 class="text-success mb-0 mt-3">
 									$25,000 <small>/mois</small></h2>
 							</div>
@@ -373,7 +373,7 @@
 							<div class="card-body">
 								<h5 class="card-title">Villa in Melbourne</h5>
 								<h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i> NJ
-									07305, USA</h6>
+									07305, RDC</h6>
 								<h2 class="text-success mb-0 mt-3">
 									$12,000 <small>/mois</small></h2>
 							</div>
@@ -394,7 +394,7 @@
 							<div class="card-body">
 								<h5 class="card-title">Villa on Hollywood Boulev</h5>
 								<h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i> The
-									Village, Jersey City, NJ 07302, USA</h6>
+									Village, Jersey City, NJ 07302, RDC</h6>
 								<h2 class="text-success mb-0 mt-3">
 									$356, 000 <small>/mois</small></h2>
 							</div>
@@ -411,7 +411,7 @@
 		</div>
 	</section>
 
-
+<!--
 	<section class="section-padding bg-white">
 		<div class="section-title text-center mb-5">
 			<h2>Propriété par ville</h2>
@@ -424,7 +424,7 @@
 						<a href="#">
 							<img class="card-img" src="img/overlay/1.png" alt="Card image">
 							<div class="card-img-overlay">
-								<h3 class="card-title text-white">New York</h3>
+								<h3 class="card-title text-white">Lubumbashi</h3>
 								<p class="card-text text-white">16 Properties</p>
 							</div>
 						</a>
@@ -435,7 +435,7 @@
 						<a href="#">
 							<img class="card-img" src="img/overlay/2.png" alt="Card image">
 							<div class="card-img-overlay">
-								<h3 class="card-title text-white">Los Angeles</h3>
+								<h3 class="card-title text-white">Kolwezi</h3>
 								<p class="card-text text-white">265 Properties</p>
 							</div>
 						</a>
@@ -448,7 +448,7 @@
 						<a href="#">
 							<img class="card-img" src="img/overlay/3.png" alt="Card image">
 							<div class="card-img-overlay">
-								<h3 class="card-title text-white">Chicago</h3>
+								<h3 class="card-title text-white">Kinshasa</h3>
 								<p class="card-text text-white">620 Properties</p>
 							</div>
 						</a>
@@ -460,7 +460,7 @@
 						<a href="#">
 							<img class="card-img" src="img/overlay/4.png" alt="Card image">
 							<div class="card-img-overlay">
-								<h3 class="card-title text-white">Philadelphia</h3>
+								<h3 class="card-title text-white">Fungurume</h3>
 								<p class="card-text text-white">28 Properties</p>
 							</div>
 						</a>
@@ -469,7 +469,7 @@
 			</div>
 		</div>
 	</section>
-
+-->
 
 	<!-- <section class="section-padding">
 		<div class="section-title text-center mb-5">
