--- a/property-single-gallery.html
+++ b/property-single-gallery.html
@@ -156,7 +156,7 @@
 				<div class="row">
 					<div class="col-lg-8 col-md-8">
 						<h1>House in Kent Street</h1>
-						<h6><i class="mdi mdi-home-map-marker"></i> 250-260 3rd St, Hoboken, NJ 07030, USA</h6>
+						<h6><i class="mdi mdi-home-map-marker"></i> 250-260 3rd St, Hoboken, NJ 07030, RDC</h6>
 					</div>
 					<div class="col-lg-4 col-md-4 text-right">
 						<h6 class="mt-2">À louer</h6>
@@ -564,7 +564,7 @@
 												<div class="card-body">
 													<h5 class="card-title">Family House in Hudson</h5>
 													<h6 class="card-subtitle mb-2 text-muted"><i
-															class="mdi mdi-home-map-marker"></i> Hoboken, NJ, USA</h6>
+															class="mdi mdi-home-map-marker"></i> Hoboken, NJ, RDC</h6>
 													<h2 class="text-success mb-0 mt-3">
 														$127,000 <small>/mois</small></h2>
 												</div>
@@ -581,7 +581,7 @@
 							<form name="sentMessage">
 								<div class="control-group form-group">
 									<div class="controls">
-										<label>Sale Price <span class="text-danger">*</span></label>
+										<label>Prix de vente <span class="text-danger">*</span></label>
 										<input type="text" placeholder="$" class="form-control" required>
 									</div>
 								</div>
@@ -648,7 +648,7 @@
 							<div class="card-body">
 								<h5 class="card-title">Family House in Hudson</h5>
 								<h6 class="card-subtitle mb-2 text-muted"><i class="mdi mdi-home-map-marker"></i>
-									Hoboken, NJ, USA</h6>
+									Hoboken, NJ, RDC</h6>
 								<h2 class="text-success mb-0 mt-3">
 									$127,000 <small>/mois</small></h2>
 							</div>
